Fixing alignment of more episodes cards on single podcast template

--- a/web/app/themes/brian-thompson/assets/styles/pages/_podcast.scss
+++ b/web/app/themes/brian-thompson/assets/styles/pages/_podcast.scss
@@ -378,13 +378,27 @@ body.blue-color-scheme {
     .posts {
       left: -5px;
       position: relative;
+      margin-bottom: 40px;
       width: calc(100% + 10px);
+    }
+
+    .post {
+      margin-bottom: 20px;
     }
 
     article {
       .header-image {
         min-width: $col;
         flex-basis: $col;
+      }
+
+      .header-text {
+        padding-left: 11px;
+      }
+
+      .title {
+        font-size: 15px;
+        line-height: 18px;
       }
     }
 
